test/invalid/MissingField/MissingField.plume
/**
 * @author 35237, Marcos Vasco
 */
class MissingField extends Empregado is

	sal : Integer
	
	method getSalary : () -> Integer is
		sal
		
	method raise : (raiseVal : Integer) -> Empregado is
		new ChefeDepartamento(sal+raiseVal)